# GE-spMM_spMV_basline

./: .gitignore  CMakeLists.txt  scraper.py  test_build.sh  visualizer.py
cmake/: FindCUDA.cmake  FindOpenMP.cmake
disorganized/: Makefile  cuda_cusparse.cu  cuda_cusparse_csr.cu  example_shared_profiler.c  manual_cuda_csr.cu  omp_coo.c  omp_csr.c  omp_csr_2.c  omp_csr_3.c  omp_csr_4.c  omp_ell.c  omp_padded_csr.c  profiler.md  report1.nsys-rep  simple_profiler.h  sparse_common.h  sparse_common_2.h  sparse_common_3.h  sparse_matrix_mult.cu  tester.py
disorganized/spMM/: BCSR.c  COO.c  CSR.c  ELL.c  PCSR.c
disorganized/spMV/: BCSR.c  COO.c  COO_ELL.c  CSR.c  ELL.c  PCSR.c
include/algorithms/spMM/: csr_spmm.h
include/algorithms/spMV/: csr_spmv.h
include/formats/: csr.h
include/parsers/: parse_mtx.h
include/utils/: profiler.h  status.h  validator.h
src/algorithms/spMM/cpu/openmp/: csr_mult.c
src/algorithms/spMM/cpu/sequential/: csr_mult.c
src/algorithms/spMV/cpu/openmp/: csr_mult.c
src/algorithms/spMV/cpu/sequential/: csr_mult.c
src/formats/: csr.c
src/parsers/: parse_mtx.c
src/utils/: profiler.c  status.c  validator.c
tests/: test_utils.c  test_utils.h  validate_implementations.c
tests/algorithms/: csr_spmm_tests.c  csr_spmv_tests.c
tests/formats/: test_csr.c
tests/parsers/: mtx_parse_test.c  mtx_parse_tests.c
